# InsightFlow-Real-Time-Business-Analytics-with-Ml

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  plan.md  pyproject.toml  todo.md
.github/workflows/: ci.yml  retrain.yml
api/: .dockerignore  .eslintrc.cjs  Dockerfile  README.md  package.json  tsconfig.json
api/prisma/: schema.prisma
api/src/: app.module.ts  main.ts
docs/: ADR-001-clickhouse-vs-timescale.md  ADR-002-kafka-vs-redis-streams.md  ADR-003-forecast-model-choice.md  ADR-004-nestjs-bff-fastapi-ml.md  ADR-005-multitenant-row-level.md  README.md  architecture.md  data-model.md  deploy-hetzner.md  lessons.md
forecast/: .dockerignore  Dockerfile  README.md  requirements.txt
forecast/app/: __init__.py  main.py  settings.py
forecast/tests/: synthetic.py  test_anomaly.py  test_arima_runner.py  test_evaluation.py  test_prophet_runner.py  test_registry.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  next.config.mjs  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/lib/: alerts.ts  api.ts  apikeys.ts  auth.ts  dashboards.ts  filters.ts  forecast.ts  onboarding.ts  pdf.ts  theme.ts  ws.ts
infra/: README.md  backup.sh  docker-compose.dev.yml  docker-compose.yml
infra/caddy/: Caddyfile
infra/clickhouse/: init.sql
infra/kafka/: topics.yml
ingestion/: .dockerignore  Dockerfile  README.md  requirements.txt
ingestion/app/: __init__.py  auth.py  consumer.py  enrich.py  ingest_api.py  main.py  producer.py  rate_limit.py  schemas.py  settings.py
scripts/: README.md  create_topics.sh  retrain_cron.sh  seed_demo.py  smoke.sh
sdk/: .eslintrc.cjs  README.md  package.json  tsconfig.json  tsup.config.ts
tests/: README.md
(+103 files in other folders)
